update: #450 rtl - align, modify: options.rtl > direction, fix: list style

--- a/src/assets/css/suneditor-contents.css
+++ b/src/assets/css/suneditor-contents.css
@@ -97,6 +97,7 @@
 
 /* ol, ul */
 .sun-editor-editable ol {
+    list-style-position: inside;
     display: block;
     list-style-type: decimal;
     margin-block-start: 1em;
@@ -106,6 +107,7 @@
     padding-inline-start: 40px;
 }
 .sun-editor-editable ul {
+    list-style-position: inside;
     display: block;
     list-style-type: disc;
     margin-block-start: 1em;
