--- a/src/assets/css/suneditor.css
+++ b/src/assets/css/suneditor.css
@@ -422,13 +422,14 @@
 
 /** --- RTL ---------------------------------------------------------- */
 /* tray */
-/* .sun-editor.se-rtl .se-btn-tray {direction:rtl;} */
+.sun-editor.se-rtl .se-btn-tray {direction:rtl;}
 /* button - se-rtl-icon */
 .sun-editor.se-rtl button .se-rtl-icon {display:initial; transform:rotate(0deg) rotateY(180deg);}
 /* button - select text */
 .sun-editor.se-rtl .se-btn-select .txt {flex:auto; text-align:right; direction:rtl;}
 /* button - se-menu-list */
 .sun-editor.se-rtl .se-btn-list {text-align:right;}
+.sun-editor.se-rtl .se-btn-list > .se-list-icon {margin:-1px 0 0 10px;}
 /* button - se-menu-list - li */
 .sun-editor.se-rtl .se-menu-list li {float:right;}
 /* menu list */
